--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -7,14 +7,17 @@
 }
 .tips{
     font-family: inherit;
-    color: orangered;
+    color: #ca9832;
+}
+.sub-heading-color{
+    color: #444;
 }
 
 
 /* index-about */
 .rounded-circle-about{
-    width: 150px !important;
-    height: 150px;
+    width: 105px !important;
+    height: 105px !important;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
