footer,gallery changes

--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -12,7 +12,14 @@
 .sub-heading-color{
     color: #444;
 }
-
+/* head-slider */
+.head-slider .owl-item{
+    height: 620px;
+}
+.head-slider img{
+    object-fit: contain;
+    height: 100%;
+}
 
 /* index-about */
 .rounded-circle-about{
